# xiaosuo

./: .env.example  .gitignore  AUDIT_REPORT.md  CLAUDE.md  PROJECT_ARCHITECTURE.md  README.md  _check_imports.py  _check_syntax.py  _check_versions.bat  _install_npm.bat  _install_py.bat  _serve_frontend.py  _setup.bat  _sse_output.txt  _start_backend.bat  _start_backend.ps1  _start_backend2.bat  _start_backend_direct.bat  _start_backend_v2.ps1  _start_backend_v3.ps1  _start_frontend.bat  _start_frontend.ps1  _start_server.py  _test_e2e.py  _test_loop.py  _test_round1.py  _verify_sse.py  check_db.py  eslint.config.js  index.html  novel-agent-design-review.docx  novel-agent-design-review.md  novel-agent-design.md  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  start.sh  test_memory_continuity.py  (+5 more)
.trae/documents/: agent-loop-prompt-optimization.md  chapter-coherence-optimization.md  comprehensive-optimization-plan-v2.md  expert-architecture-review.md  loop-prompt-persistence-and-chapter-continuity.md  orchestrator-full-integration-audit.md  test-failures-fix.md  小说创作数据流优化方案.md  标题数据流断裂修复方案.md  角色代入式创作-剩余实施计划.md  角色代入式小说创作优化方案.md
docs/: REFACTORING_V2_PLAN.md
output/: 末日重生_0d6b691fcd.md  直播研发丧尸病毒全网吓哭_3dcfa19d6b.md  直播研发丧尸病毒全网吓哭_420b6e55d1.md  直播研发丧尸病毒全网吓哭_591e72c9f6.md  直播研发丧尸病毒全网吓哭_620dfe0b13.md  直播研发丧尸病毒全网吓哭_a322692423.md  直播研发丧尸病毒全网吓哭_b2c94b8655.md  诡异_5e33921c0f.md  鬼影_207f829bfc.md
pages/api/: proxy.ts
src/backend/: main.py
src/frontend-v2/: next.config.js  package.json  tailwind.config.ts
tests/: test_v2_complete.py
(+127 files in other folders)
